syntax = "proto3";

package morphcloud.advert;

option go_package = "internal/pb";

import "google/protobuf/timestamp.proto";

message Advert {
    uint64 id = 1;
    uint32 category_id = 2;
    uint64 user_id = 3;
    string title = 4;
    string description = 5;
    float  price = 6;
    uint32 status = 7;
    google.protobuf.Timestamp activated_at = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}
